check if the hotel names match the names in the list